--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
+}
+.item{
+	width:100px;
+	height:100px;
+	background-color:red;
+	color:white;
+	text-align:center;
+}
